--- a/podcasts/templates/podinfo.html
+++ b/podcasts/templates/podinfo.html
@@ -17,8 +17,8 @@
           {{ podcast.title }}
         </h3>
         <p>
-          {{ podcast.description }}<
-          /p>
+          {{ podcast.description }}
+        </p>
       </div>
       <div class="col-auto">
         <form id="sub-form" action="{% url 'subscribe' %}"
