--- a/index/templates/index/subscriptions_results.html
+++ b/index/templates/index/subscriptions_results.html
@@ -1,22 +1,26 @@
 <div class="col">
-  {% if subscriptions %}
-    {% for subscription in subscriptions %}
-      <div class="row">
-        <a class="col show-podinfo sub-box"
-        id="{{ subscription.itunesid }}" href=
-         "{% url 'podinfo' itunesid=subscription.itunesid %}">
-          <h6>
-            {{ subscription.pod.title }}
-          </h6>
+  <div class="row" id="subscriptions-row">
+    <div class="col">
+      {% if subscriptions %}
+        {% for subscription in subscriptions %}
+            <div class="row">
+              <a class="col show-podinfo sub-box"
+              id="{{ subscription.itunesid }}" href=
+               "{% url 'podinfo' itunesid=subscription.itunesid %}">
+                <h6>
+                  {{ subscription.pod.title }}
+                </h6>
+                <p>
+                  {{ subscription.last_updated }}
+                </p>
+              </a>
+            </div>
+        {% endfor %}
+      {% else %}
           <p>
-            {{ subscription.last_updated }}
+            No results :p
           </p>
-        </a>
-      </div>
-    {% endfor %}
-  {% else %}
-    <p>
-      No results :p
-    </p>
-  {% endif %}
+      {% endif %}
+    </div>
+  </div>
 </div>
