--- a/index/templates/index/header.html
+++ b/index/templates/index/header.html
@@ -29,7 +29,7 @@
       </div>
     </nav>
     <!-- CONTENT -->
-    <div class="container" id="main-content">
+    <div id="main-content">
       {% block content %}
       {% endblock %}
     </div>
