--- a/index/templates/index/subscriptions_base.html
+++ b/index/templates/index/subscriptions_base.html
@@ -6,15 +6,22 @@ subscriptions
 
 {% block content %}
 <!-- MULTI BAR -->
-<form class="row" id="search-form" method="GET" action="{% url 'search' %}">
-  {% include 'multibar.html' %}
-</form>
+<div class="container">
+   <form class="row" id="search-form" method="GET" action="{% url 'search' %}">
+     {% include 'multibar.html' %}
+   </form>
+</div>
 <!-- MAIN -->
-<div class="row" id="main">
-  <div class="col">
-  <!-- SUBSCRIPTIONS -->
-    <div class="row" id="results">
-      {% include 'index/subscriptions_results.html' %}
+<div class="container">
+  <div class="row" id="main">
+    <div class="col">
+      <!-- SUBSCRIPTIONS -->
+        <div class="row" id="results">
+          {% include 'index/subscriptions_results.html' %}
+        </div>
+      <!-- RECOMMENDATIONS -->
+      <div class="row" id="recommendations">
+      </div>
     </div>
   </div>
 </div>
