--- a/podcasts/templates/podinfo.html
+++ b/podcasts/templates/podinfo.html
@@ -6,63 +6,67 @@
 
 {% block content %}
 <!-- PODINFO BAR -->
-<div class="row">
-  <div class="col color" id="podinfo-bar">
-    <div class="row texture" id="podinfo">
-      <div class="col-auto" id="podinfo-image">
-        <img src="{{ podcast.artworkUrl }}170x170bb.jpg" />
-      </div>
-      <div class="col">
-        <h3>
-          {{ podcast.title }}
-        </h3>
-        <p>
-          {{ podcast.description }}
-        </p>
-      </div>
-      <div class="col-auto">
-        <form id="sub-form" action="{% url 'subscribe' %}"
-        id="{{ podcast.itunesid }}" method="POST">
-          {% csrf_token %}
-          <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
-          {% if podcast.subscribed %}
-          <button type="submit" class="btn btn-outline-primary" id="sub-button"
-          value="Unsubscribe">
-            Unsubscribe
-          {% else %}
-          <button type="submit" class="btn btn-outline-primary" id="sub-button"
-          value="Subscribe">
-            Subscribe
-          {% endif %}
-          </button>
-        </form>
-        <p>
-          {% if podcast.genre.supa %}
-            {{ podcast.genre.supa }} -
-          {% endif %}
-          {{ podcast.genre }}
-        </p>
-        <p>
-          {{ podcast.language }}
-        </p>
-        {% if podcast.explicit %}
+<div class="container">
+  <div class="row">
+    <div class="col color" id="podinfo-bar">
+      <div class="row texture" id="podinfo">
+        <div class="col-auto" id="podinfo-image">
+          <img src="{{ podcast.artworkUrl }}170x170bb.jpg" />
+        </div>
+        <div class="col">
+          <h3>
+            {{ podcast.title }}
+          </h3>
           <p>
-            Explicit
+            {{ podcast.description }}
           </p>
-        {% endif %}
-        <p>
-          <em>
-            {{ podcast.copyrighttext }}
-          </em>
-        </p>
+        </div>
+        <div class="col-auto">
+          <form id="sub-form" action="{% url 'subscribe' %}"
+          id="{{ podcast.itunesid }}" method="POST">
+            {% csrf_token %}
+            <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
+            {% if podcast.subscribed %}
+            <button type="submit" class="btn btn-outline-primary" id="sub-button"
+            value="Unsubscribe">
+              Unsubscribe
+            {% else %}
+            <button type="submit" class="btn btn-outline-primary" id="sub-button"
+            value="Subscribe">
+              Subscribe
+            {% endif %}
+            </button>
+          </form>
+          <p>
+            {% if podcast.genre.supa %}
+              {{ podcast.genre.supa }} -
+            {% endif %}
+            {{ podcast.genre }}
+          </p>
+          <p>
+            {{ podcast.language }}
+          </p>
+          {% if podcast.explicit %}
+            <p>
+              Explicit
+            </p>
+          {% endif %}
+          <p>
+            <em>
+              {{ podcast.copyrighttext }}
+            </em>
+          </p>
+        </div>
       </div>
     </div>
   </div>
 </div>
 <!-- TRACKS -->
+<div class="container">
   <div class="row" id="tracks">
     {% include 'tracks.html' %}
   </div>
+</div>
 {% endblock %}
 
 {% block extrajs %}
