--- a/podcasts/templates/tracks.html
+++ b/podcasts/templates/tracks.html
@@ -10,6 +10,9 @@
             Released
           </td>
           <td>
+            Length
+          </td>
+          <td>
             Play
           </td>
           <td>
@@ -26,9 +29,9 @@
           <td>
             {{ track.pubDate }}
           </td>
-          <!-- <td>
+          <td>
             {{ track.length }}
-          </td> -->
+          </td>
           <td>
             <form class="play" action="{% url 'play' %}" method="POST" target="_blank">
               <!-- ADDTL TRACK INFO HERE -->
