--- a/index/templates/index/search_results.html
+++ b/index/templates/index/search_results.html
@@ -5,9 +5,11 @@ dopepod
 {% endblock %}
 
 {% block results %}
+{% include 'optionsbar.html' %}
+<div class="row">
   {% if podcasts %}
     {% for podcast in podcasts %}
-      <a class="col-lg-2 col-md-3 col-sm-4 col-6 result-wrapper show-podinfo" id="{{ podcast.itunesid }}" href=
+    <a class="col-lg-2 col-md-3 col-sm-4 col-6 result-wrapper show-podinfo" id="{{ podcast.itunesid }}" href=
        "{% url 'podinfo' itunesid=podcast.itunesid %}">
        <div class="result-box">
          <div class="result-image">
@@ -25,11 +27,14 @@ dopepod
            </p>
          </div>
      </div>
-      </a>
+    </a>
     {% endfor %}
   {% else %}
+  <div class="col">
     <p>
       No results :p
     </p>
+  </div>
   {% endif %}
+</div>
 {% endblock %}
