--- a/index/templates/index/results_detail.html
+++ b/index/templates/index/results_detail.html
@@ -1,4 +1,4 @@
-{% extends request.is_ajax|yesno:'ajax.html,index/search_base.html' %}
+{% extends request.is_ajax|yesno:'ajax.html,index/index.html' %}
 
 {% block title %}
 dopepod
