--- a/podcasts/templates/podinfo.html
+++ b/podcasts/templates/podinfo.html
@@ -38,8 +38,8 @@
             </button>
           </form>
           <p>
-            {% if podcast.genre.supa %}
-              {{ podcast.genre.supa }} -
+            {% if podcast.genre.supergenre %}
+              {{ podcast.genre.supergenre }} -
             {% endif %}
             {{ podcast.genre }}
           </p>
