--- a/podcasts/templates/tracks.html
+++ b/podcasts/templates/tracks.html
@@ -1,6 +1,7 @@
 {% if tracks %}
   <div class="col">
     <table class="table table-bordered table-hover">
+      <caption>List of podcast episodes</caption>
       <thead>
         <tr>
           <td>
