--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -12,16 +12,15 @@ dopepod
    </form>
 </div>
 <!-- MAIN -->
-<div class="container">
-  <div class="row" id="main">
-    <div class="col" id="results">
+<div class="container"id="main">
+  <div class="row" id="results-content">
       <!-- RESULTS -->
       {% block results %}
       {% endblock %}
+  </div>
+  <div class="row" id="recommendations-content">
       <!-- RECOMMENDATIONS -->
-      {% block recommendations %}
-      {% endblock %}
-    </div>
+      {% include 'index/recommendations.html' %}
   </div>
 </div>
 {% endblock %}
