--- a/index/templates/index/results_detail.html
+++ b/index/templates/index/results_detail.html
@@ -5,36 +5,29 @@ dopepod
 {% endblock %}
 
 {% block results %}
-{% include 'optionsbar.html' %}
-<div class="row">
-  {% if podcasts %}
-    {% for podcast in podcasts %}
-    <a class="col-lg-2 col-md-3 col-sm-4 col-6 result-wrapper show-podinfo" id="{{ podcast.itunesid }}" href=
-       "{% url 'podinfo' itunesid=podcast.itunesid %}">
-       <div class="result-box">
-         <div class="result-image">
-           <img src="{{ podcast.artworkUrl }}180x180bb.jpg" />
-         </div>
-         <div class="result-title">
-           <h6>{{ podcast.title }}</h6>
-         </div>
-         <div class="result-genre">
-           <p>
-             {% if podcast.genre.supa %}
-             {{ podcast.genre.supa }} -
-             {% endif %}
-             {{ podcast.genre }}
-           </p>
-         </div>
-     </div>
-    </a>
-    {% endfor %}
-  {% else %}
-  <div class="col">
-    <p>
-      No results :p
-    </p>
+<div class="col" id="results">
+  {% include 'optionsbar.html' %}
+  <div class="row">
+    {% if podcasts %}
+      {% for podcast in podcasts %}
+      <a class="col-lg-2 col-md-3 col-sm-4 col-6 result-box show-podinfo" id="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}">
+        <img class="img-fluid result-image" src="{{ podcast.artworkUrl }}200x200bb.jpg" />
+        <h6 class="result-title">{{ podcast.title }}</h6>
+        <p class="result-genre">
+         {% if podcast.genre.supergenre %}
+         {{ podcast.genre.supergenre }} -
+         {% endif %}
+         {{ podcast.genre }}
+        </p>
+      </a>
+      {% endfor %}
+    {% else %}
+      <div class="col">
+        <p>
+          No results :p
+        </p>
+      </div>
+    {% endif %}
   </div>
-  {% endif %}
 </div>
 {% endblock %}
