--- a/index/templates/index/subscriptions.html
+++ b/index/templates/index/subscriptions.html
@@ -5,31 +5,33 @@ dopepod
 {% endblock %}
 
 {% block results %}
-{% include 'optionsbar.html' %}
-<div class="row" id="subscriptions-row">
-  {% if subscriptions %}
-    <div class="col">
-      {% for subscription in subscriptions %}
-        <div class="row">
-          <a class="col show-podinfo sub-box"
-          id="{{ subscription.itunesid }}" href=
-           "{% url 'podinfo' itunesid=subscription.itunesid %}">
-            <h6>
-              {{ subscription.pod.title }}
-            </h6>
-            <p>
-              {{ subscription.last_updated }}
-            </p>
-          </a>
-        </div>
-      {% endfor %}
-    </div>
-  {% else %}
-    <div class="col">
-      <p>
-        No results :p
-      </p>
-    </div>
-  {% endif %}
+<div class="col" id="results">
+  {% include 'optionsbar.html' %}
+  <div class="row" id="subscriptions-list">
+    {% if subscriptions %}
+      <div class="col">
+        {% for subscription in subscriptions %}
+          <div class="row">
+            <a class="col show-podinfo sub-box"
+            id="{{ subscription.itunesid }}" href=
+             "{% url 'podinfo' itunesid=subscription.itunesid %}">
+              <h6>
+                {{ subscription.pod.title }}
+              </h6>
+              <p>
+                {{ subscription.last_updated }}
+              </p>
+            </a>
+          </div>
+        {% endfor %}
+      </div>
+    {% else %}
+      <div class="col">
+        <p>
+          No results :p
+        </p>
+      </div>
+    {% endif %}
+  </div>
 </div>
 {% endblock %}
