--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -1,15 +1,15 @@
 <div class="row texture" id="player-bar">
   <div class="col-auto">
-    <img src="{{ track.artwork }}100x100bb.jpg" />
+    <img src="{{ episode.artwork }}100x100bb.jpg" />
   </div>
   <div class="col">
     <div class="row">
       <div class="col">
         <h6>
-          {{ track.podcast }}
+          {{ episode.podcast }}
         </h6>
         <p>
-          {{ track.title }} | {{ track.date }}
+          {{ episode.title }} | {{ episode.date }}
         </p>
       </div>
       <div class="col-auto">
@@ -21,7 +21,7 @@
     <div class="row">
       <div class="col">
         <audio controls preload="metadata" autoplay>
-          <source src="{{ track.url }}" type="{{ track.type }}"/>
+          <source src="{{ episode.url }}" type="{{ episode.type }}"/>
         </audio>
       </div>
     </div>
