--- a/index/static/style.css
+++ b/index/static/style.css
@@ -192,7 +192,7 @@ body {
 }
 .result-title {
   overflow: hidden;
-  padding-top: 0.5rem;
+  margin-top: 0.5rem;
   height: 3.8rem;
   color: #000;
 }
