--- a/index/templates/index/settings.html
+++ b/index/templates/index/settings.html
@@ -18,11 +18,23 @@ settings
       <button class="btn btn-primary" type="submit">
         Save changes
       </button>
-      <a class="password-link" href="{% url 'account_reset_password' %}"
-      data-toggle="modal" data-target="#modal">
+      <!-- EXPLICIT -->
+      {% if selected_explicit == True or selected_explicit == None %}
+        <label class="btn btn-outline-primary">
+          <input type="checkbox" name="explicit" id="explicit-button" value="false">
+          Hide Explicit
+        </label>
+      {% else %}
+        <label class="btn btn-outline-primary active">
+          <input type="checkbox" name="explicit" id="explicit-button" value="false" checked>
+          Hide Explicit
+        </label>
+      {% endif %}
+        <a class="password-link" href="{% url 'account_reset_password' %}"
+        data-toggle="modal" data-target="#modal">
         Reset Password
       </a>
-    </div>
-  </form>
+    </form>
+  </div>
 </div>
 {% endblock %}
