--- a/index/templates/index/results_detail.html
+++ b/index/templates/index/results_detail.html
@@ -23,18 +23,23 @@ dopepod
             Subscribe
             {% endif %}
             </button>
-          </form>
+          </form>   
           <a class="show-podinfo" href="{% url 'podinfo' itunesid=podcast.itunesid %}">
-            <img class="img-fluid result-image" src="{{ podcast.artworkUrl }}200x200bb.jpg" />
-            <h6 class="result-title">
-              <strong>
-                {{ podcast.title }}
-              </strong>
-            </h6>
-            <p class="result-artist">
-              by {{ podcast.artist }}
-            </p>
+            <div class="result-image">
+            </div>
+            <img class="img-fluid" src="{{ podcast.artworkUrl }}200x200bb.jpg" />
           </a>
+          <h6 class="result-title">
+            <a class="show-podinfo" href="{% url 'podinfo' itunesid=podcast.itunesid %}" title="{{ podcast.title }}">
+              {{ podcast.title }}
+            </a>
+          </h6>
+          <p class="result-artist">
+            <span>by </span>
+            <a class="show-podinfo" href="{% url 'podinfo' itunesid=podcast.itunesid %}" title="{{ podcast.artist }}">
+              {{ podcast.artist }}
+            </a>
+          </p>
         </div>
       {% endfor %}
     {% else %}
